Changing smallest media query to see if that'll resolve some of the adjustments on the landscape mode on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -343,7 +343,7 @@ section.module.parallax-1 {
   }
 }
 
-@media all and (max-width: 468px) {
+@media all and (max-width: 667px) {
   html {font-size: 10px;}
   .skill_container {
     width:  100%;
